refactor: simplify getAffectedDays method with PostgreSQL array syntax